--- a/src/components/LinkButtonHeader.astro
+++ b/src/components/LinkButtonHeader.astro
@@ -6,6 +6,6 @@ interface Props {
 const { href } = Astro.props
 ---
 
-<a href={href} class="p-1 border-b-2 border-transparent hover:border-[#FC6168] transition-all duration-150">
+<a href={href} class="bg-black min-[900px]:bg-[#1e1e1e] p-1 border-b-2 border-transparent hover:border-[#FC6168] transition-all duration-150">
     <slot/>
 </a>
