--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,16 +20,18 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[70vw] mx-auto">
+		<main class="max-w-[70vw] mx-auto my-[80px]">
 			<slot />
 		</main>
 	</body>
 </html>
 <style is:global>
-	html {
-		font-family: system-ui, sans-serif;
+	* {
+		padding: 0;
+		margin: 0;
 		background: #1e1e1e;
 		color-scheme: dark ligth;
-		background-size: 224px;
 	}
+
+	
 </style>
