--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -91,11 +91,9 @@ import LinkButtonHeader from "./LinkButtonHeader.astro";
                     >
                 </button>
             </li>
-            <li><LinkButtonHeader href="#inico">Inicio</LinkButtonHeader></li>
             <li><LinkButtonHeader href="#sobremi">Sobre mí</LinkButtonHeader></li>
-            <li><LinkButtonHeader href="#servicios">Mis servicios</LinkButtonHeader></li>
+            <li><LinkButtonHeader href="#experiencias">Experiencias</LinkButtonHeader></li>
             <li><LinkButtonHeader href="#proyectos">Proyectos</LinkButtonHeader></li>
-            <li><LinkButtonHeader href="#contactame">Contáctame</LinkButtonHeader></li>
         </ul>
     </nav>
 </header>
