--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[70vw] mx-auto my-[80px]">
+		<main class="max-w-[70vw] mx-auto">
 			<slot />
 		</main>
 	</body>
