--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,80 +1,8 @@
 ---
+import About from '../components/About.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		my portafolio
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa alias rem eius dolores dolorum quidem quae quisquam totam. Quidem voluptate reiciendis iste consectetur quo? Neque quis aliquam corporis ex officiis!
-	</main>	
+	<About/>	
 </Layout>
