--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,18 +1,11 @@
 <section id="sobremi" class="flex justify-around items-center h-screen max-[768px]:flex-col-reverse max-[768px]:justify-center max-[768px]:gap-3">
     <div>
         <h1 class="text-4xl flex flex-col font-bold">
-            <span class="text-xl font-normal text-[#FC6168]">Hi I am</span>
+            <span class="text-xl font-normal text-[#FC6168]">Hey, soy</span>
             Alejandro Ameneyro
         </h1>
     </div>
-    <div class="imgContainer">
-        <img class="z-20 " src="./public/Group 6.png" alt="">
+    <div class="imgContainer flex justify-center items-center h-48 w-48 relative">
+        <img src="./public/Group 6.png" alt="AlexxScript">
     </div>
 </section>
-
-<style>
-    .imgContainer{
-        /* background-image: linear-gradient( -45deg, #bd34fe 50%, #47caff 50% );
-        filter: blur(1px); */
-    }
-</style>
