--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,11 +1,33 @@
+---
+import ContainerLinks from "./ContainerLinks.astro"
+---
+
 <section id="sobremi" class="flex justify-around items-center h-screen max-[768px]:flex-col-reverse max-[768px]:justify-center max-[768px]:gap-3">
     <div>
-        <h1 class="text-4xl flex flex-col font-bold">
-            <span class="text-xl font-normal text-[#FC6168]">Hey, soy</span>
+        <h1 class="text-4xl flex flex-col font-bold gap-2 mb-2">
+            <span class="text-2xl font-medium text-[#FC6168]">Hey, soy</span>
             Alejandro Ameneyro
         </h1>
+        <p class="mb-3 text-xl text-gray-400 max-w-[600px]">
+            Egresado de la carrera Técnico en Informática y actualmente estudiante de la
+            Licenciatura en Ciencias de la Informática en CDMX, México.<br/>
+            Especializado en desarrollo web, con el objetivo de <strong class="text-[#FC6168]">demostrar mi identidad y habilidades a través de la tecnología</strong>.
+        </p>
+        <ContainerLinks/>
     </div>
-    <div class="imgContainer flex justify-center items-center h-48 w-48 relative">
-        <img src="./public/Group 6.png" alt="AlexxScript">
+    <div class="imgContainer box-content flex justify-center items-center h-[300px] w-[300px]">
+        <div class="bgImg bg-white h-[300px] w-[300px] absolute"></div>
+        <img class="z-10"src="./public/Group 6.png" alt="AlexxScript">
     </div>
 </section>
+
+<style>
+    .bgImg{
+        background-image: linear-gradient( -45deg, #8D3F43 50%, #857FFA 50% );
+        filter: blur(60px);
+    }
+
+    img{
+        background-color: transparent;
+    }
+</style>
