modificacion del navbar y resume finalizado

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import About from '../components/About.astro';
+import SectionExperiencia from '../components/SectionExperiencia.astro';
+import SectionResume from '../components/SectionResume.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<About/>	
+	<SectionResume/>	
+	<SectionExperiencia/>
 </Layout>
