--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,17 +20,20 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<NavBar />
-		<main class="max-w-[70vw] mx-auto">
+		<main class="max-w-[75vw] max-lg:my-[90px] mx-auto">
 			<slot />
 		</main>
 	</body>
 </html>
 <style is:global>
 	* {
+		color-scheme: dark ligth;
+	}
+
+	body {
 		padding: 0;
 		margin: 0;
 		background: #1e1e1e;
-		color-scheme: dark ligth;
 	}
 
 	
