--- a/src/components/SectionExperiencia.astro
+++ b/src/components/SectionExperiencia.astro
@@ -1,13 +1,20 @@
-<section id="experiencias">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis officia fugiat dignissimos excepturi voluptatem nisi et? Iusto aliquam dolor laudantium ducimus, nostrum iure totam harum amet sed eaque impedit. Aspernatur.</p>
+<section id="experiencia">
+    <h2 class="my-3 flex items-center gap-2 text-2xl font-medium">
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 9a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-9z" /><path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" /></svg>
+        Experiencia
+    </h2>
+    <ul>
+        <li class="">
+            <div>
+                <h3 class="text-xl"><strong>Desarrollo del sitio web "PADEK"</strong></h3>
+                <p>Abril 2022–Octubre 2022 </p>
+            </div>
+            <div>
+                <p>
+                    Desarrollo del sitio web PADEK como proyecto de servicio social en el cual se pusieron en
+                    práctica las habilidades de comunicación, trabajo en equipo y  
+                </p>
+            </div>
+        </li>
+    </ul>
 </section>
