--- a/src/components/SectionResume.astro
+++ b/src/components/SectionResume.astro
@@ -4,7 +4,8 @@ import ContentResume from "./ContentResume.astro"
 import ImgPerro from "./ImgPerro.astro"
 ---
 
-<section id="intro" class="flex justify-around items-center h-screen max-md:h-[100vh] max-lg:h-[50vh] max-lg:flex-col-reverse max-lg:justify-center max-[768px]:gap-3">
+<section id="intro" class="my-10 flex flex-col-reverse justify-center items-center
+                          lg:h-[600px] min-[1050px]:my-0 min-[1050px]:h-screen xl:h-screen xl:flex-row xl:justify-evenly">
     <div class="">
        <ContentResume/> 
        <ContainerLinks/>
