--- a/src/components/LinkButtonHeader.astro
+++ b/src/components/LinkButtonHeader.astro
@@ -6,6 +6,6 @@ interface Props {
 const { href } = Astro.props
 ---
 
-<a href={href} class=" p-1 border-b-2 border-transparent hover:text-[#FC6168] transition-all duration-150">
+<a href={href} class="text-sm p-1 border-b-2 border-transparent min-[400px]:text-base hover:text-[#FC6168] transition-all duration-150">
     <slot/>
 </a>
